# PlasmaBallAnalysis

./: .gitignore  README.md  analysis.py  fourier_test.py  image_format_test.py  optical_flow_test.py  plasma-exp.py
cpp_rewrite/: CMakeLists.txt  VideoCap.cpp  VideoCap.hpp  main.cpp
